FIX: stop button not centered

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,7 +76,7 @@ video {
 }
 
 .buttons-section #btn-stop {
-  margin-left: 7px;
+  margin-left: 10px;
 }
 
 button:hover {
